--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -43,35 +43,43 @@
 .page-header {
 	padding: 70px 0;
 	margin-bottom: 55px;
-	border-bottom: 2px solid $color__borders;
+	border-bottom: 2px solid $color__background-hr-dark;
 }
 
 .entry-meta {
+	@include display(flex);
+	font-family: $font__details;
+	@include justify-content(center); 
 	text-align: center;
 	text-transform: uppercase;
 
-	span{
-		font-size: 0.8em;
+	span {
 		color: $color__text-meta;
+		@include font-size(0.8);
+		
+		&:not(:last-child) {
 
-		&:not(:first-child) {
-			&::before {
+			&:after {
 				content: '\00a0\00a0/\00a0\00a0';
 			}
 		}
 
 		a {
-			text-decoration: none;
 			color: inherit;
+			text-decoration: none;
+			
+			&:hover {
+				color: $color__link; 
+			}
 		}
 	}
 }
 
 .entry-title {
-	text-align: center;
 	color: $color__text-dark;
-	margin-top: 0.25em;
-	font-size: 2em;
+	@include font-size(2.133);
+	margin-top: 2px; 
+	text-align: center;
 
 	a {
 		color: inherit;
@@ -91,7 +99,7 @@
 .tags-list {
 	margin-top: 1em;
 	a {
-		background: $color__borders ;
+		background: $color__background-hr-dark ;
 		color: $color__text-medium;
 		display: inline-block;
 		margin-right: 10px;
@@ -232,32 +240,34 @@
 }
 
 .more-link {
-	font-size: 0.8em;
 	display: block;
-	text-align: center;
 	color: $color__text-dark;
-	text-transform: uppercase;
+	@include font-size(0.8666);
+	text-align: center;
 	text-decoration: none;
+	text-transform: uppercase;
 	margin-top: 70px;
 
 	.more-text {
+		border-top: 2px solid $color__background-hr-dark;
+		border-bottom: 2px solid $color__background-hr-dark;
+		font-family: $font__details; 
 		padding: 10px 0;
-		border-top: 2px solid $color__text-light;
-		border-bottom: 2px solid $color__text-light;
 	}
 }
 
 .entry {
-	margin-bottom: 50px;
+	margin-bottom: 75px;
 }
 
 .archive-entry {
-	padding-bottom: 50px;
-	margin-bottom: 50px;
-	border-bottom: 2px solid $color__borders;
+	border-bottom: 2px solid $color__background-hr;
+	margin-bottom: 75px;
+	padding-bottom: 75px;
 }
 
 .search-results .content-area {
+
 	article {
 		@include clearfix;
 
@@ -297,6 +307,7 @@
 
 @media screen and (max-width: 320px) {
 	.search-results .content-area {
+		
 		article {
 
 			.entry-thumbnail {
