--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -2,23 +2,23 @@ $color__background-body: #fff;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #f4f4f4;
 $color__background-hr-dark: #ebebeb;
-$color__background-button: #e6e6e6;
+$color__background-button: #fff;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 
 $color__text-screen: #21759b;
-$color__text-input: #666;
-$color__text-input-focus: #111;
+$color__text-input: #dadada;
+$color__text-input-focus: #626262;
 $color__link: #24c48a;
 $color__link-visited: #24c48a;
 $color__link-hover: #24c48a;
 $color__text-main: #626262;
 
 $color__border-button: #dadada;
-$color__border-button-hover: #ccc #bbb #aaa;
-$color__border-button-focus: #aaa #bbb #bbb;
-$color__border-input: #ccc;
-$color__border-abbr: #666;
+$color__border-button-hover: #626262;
+$color__border-button-focus: #626262;
+$color__border-input: #dadada;
+$color__border-abbr: #626262;
 
 $color__text-meta: #adadad;
 $color__text-light: #dadada;
