--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -19,7 +19,7 @@
 .page-content,
 .entry-content,
 .entry-summary {
-	margin: 1.5em 0 0;
+	margin: 2em 0 0;
 }
 
 .page-links {
@@ -78,16 +78,22 @@
 .entry-title {
 	color: $color__text-dark;
 	@include font-size(2.133);
-	margin-top: 2px; 
+	line-height: normal;
+	margin: 0.5em 0 0; 
 	text-align: center;
 
 	a {
 		color: inherit;
 		text-decoration: none;
+		
+		&:hover {
+			color: $color__text-medium;
+		}
 	}
 }
 
 .entry-thumbnail {
+	
 	margin: 35px 0;
 
 	img {
@@ -98,17 +104,18 @@
 
 .tags-list {
 	margin-top: 1em;
+	
 	a {
 		background: $color__background-hr-dark ;
 		color: $color__text-medium;
 		display: inline-block;
-		margin-right: 10px;
-		margin-bottom:10px;
-		text-decoration: none;
-		line-height: 1em;
 		font-size: 0.8em;
+		line-height: 1em;
+		margin-right: 10px;
+		margin-bottom: 10px;
 		padding: 8px 12px;
-
+		text-decoration: none;
+		
 		&:hover {
 			background: $color__primary-accent-dark;
 		}
@@ -130,6 +137,7 @@
 }
 
 .yarpp-related {
+	
 	.related-posts {
 		font-size: 1em;
 		text-transform: uppercase;
@@ -147,6 +155,7 @@
 			margin: 0;
 
 			&:hover {
+
 				.related-post-title {
 					color: $color__primary-accent-dark;
 				}
@@ -253,17 +262,26 @@
 		border-bottom: 2px solid $color__background-hr-dark;
 		font-family: $font__details; 
 		padding: 10px 0;
+		
+		&:hover {
+			border: 2px solid $color__link;
+			padding: 10px 12px;
+		}
 	}
 }
 
 .entry {
-	margin-bottom: 75px;
+	margin-bottom: 5em;
 }
 
 .archive-entry {
 	border-bottom: 2px solid $color__background-hr;
-	margin-bottom: 75px;
-	padding-bottom: 75px;
+	margin-bottom: 5em;
+	padding-bottom: 5em;
+	
+	&:last-of-type {
+		margin-bottom: 5.5em; 
+	}
 }
 
 .search-results .content-area {
